@startuml db

node "maria-db (Database)" as mariadb {
        entity "Actions" as actions {
            +id : bigint [PK]
            --
            name : varchar(400) [UNIQUE]
            trigger : mediumtext
            consequences : mediumtext
            author : bigint [FK -> Users.id]
            tags : longtext
        }

        entity "Services" as services {
            +id : bigint [PK]
            --
            name : varchar(200) [UNIQUE]
            url : varchar(2048) [UNIQUE, HASH]
            key : varchar(1024)
            Categorie : varchar(200)
            frequency : bigint
            type : varchar(200)
            tags : longtext
            created_at : datetime
        }

        entity "UserServices" as userservices {
            +id : bigint [PK]
            --
            user_id : bigint [FK -> Users.id]
            service_id : bigint [FK -> Services.id]
            area_id : bigint [FK -> Actions.id]
        }

        entity "Users" as users {
            +id : bigint [PK]
            --
            username : varchar(200)
            email : varchar(320) [UNIQUE]
            password : varchar(1000)
            method : varchar(200)
        }

        ' Relationships
        actions ||--o{ userservices : "Referenced by"
        services ||--o{ userservices : "Referenced by"
        users ||--o{ userservices : "Referenced by"
        users ||--o{ actions : "Author"
    }
@enduml
